# FA.VnV_SIL-Project_CARLA

./: .gitignore  PLAN_acc_smooth_traffic_refactor.md  README.md  SUMMARY_test_assets_v1_4.md  pyproject.toml  requirements.txt  verifyScenario.md
adapters/carla/: README.md  _generated_common.py  generated.py  generated_wrapper.py
adapters/carla/brake_feature/: generated.py
adapters/carla/lateral_feature/: generated.py
adapters/carla/longitudinal_feature/: generated.py
adapters/carla/parking_feature/: generated.py
adas_sil_execution/interface/: signal_mapping.yaml  timing_model.yaml
adas_sil_execution/kpi/collectors/: carla_collector.py  ros2_collector.py
adas_sil_execution/kpi/engine/: kpi_engine.py
adas_sil_execution/kpi/metrics/: jerk.py  ttc.py
adas_sil_execution/kpi/profiles/: acc_follow.yaml
adas_sil_execution/report/: excel_reporter.py
adas_sil_execution/runner/: adas_sil_runner.py
adas_sil_execution/sim/: carla_0_9_15.yaml  carla_0_9_16.yaml
adas_sil_execution/sut/: oem_like_autoware.yaml  sut_base.yaml
config/: lane_mapping.yaml
config/controllers/: ACC_controller.py
config/traffic/: urban_traffic.yaml
docs/: USAGE_INSTRUCTIONS.md  path_structure.md  src_folder_execution_flow.md
expander/: README.md  expander.py
report/: 260423_report_latest_ACC_003.xlsx  report_latest.xlsx
scenario_runner/: manual_control.py  scenario_runner.py
scenario_runner/srunner/autoagents/: openpilot_agent.py
scenario_runner/srunner/scenarioconfigs/: openscenario_configuration.py
scenario_runner/srunner/scenariomanager/: scenario_manager.py  urban_traffic_manager.py
scenario_runner/srunner/tools/: openscenario_parser.py
scenarios/: README.md
scenarios/core/acc_csc_001/: acc_csc_001_001.yaml  acc_csc_001_002.yaml  acc_csc_001_003.yaml  acc_csc_001_004.yaml  acc_csc_001_005.yaml  acc_csc_001_006.yaml  acc_csc_001_007.yaml  acc_csc_001_008.yaml  acc_csc_001_009.yaml  acc_csc_001_010.yaml  acc_csc_001_011.yaml  (+13 more)
scenarios/logical/: README.md  acc_csc_001.yaml  acc_csc_002.yaml  acc_csc_003.yaml  acc_csc_004.yaml  acc_csc_005.yaml  acc_csc_006.yaml  acc_csc_007.yaml  acc_csc_008.yaml  acc_csc_009.yaml  acc_csc_010.yaml  acc_csc_011.yaml  acc_csc_012.yaml  acc_csc_013.yaml  acc_csc_014.yaml  acc_csc_015.yaml  acc_csc_016.yaml  acc_csc_017.yaml  acc_csc_018.yaml  acc_csc_019.yaml  acc_csc_020.yaml  acc_csc_021.yaml  acc_csc_022.yaml
scenarios/parameters/: acc_par_001.yaml  acc_par_002.yaml  acc_par_003.yaml  acc_par_004.yaml  acc_par_005.yaml  acc_par_007.yaml  acc_par_008.yaml  acc_par_009.yaml  acc_par_014.yaml  acc_par_015.yaml
specifications/: Naming Conventions.xlsx  Test Requirements & Assessment Index.xlsx  Test Requirements.xlsx  Test Scenarios.xlsx
tests/: __init__.py  test_carla_validator.py  test_schema_validator.py  test_semantic_validator.py
tests/fixtures/: invalid_scenario.xosc  valid_scenario.xosc
tools/: Create_testcase.bat  KPI.py  __init__.py  acc_controller.py  camera.py  carla_adapter.py  hud.py  project_paths.py  run_batch.py  run_view_test.bat  start_carla.py
tools/GUI/: __init__.py  batch_runner.py  gui_runner.py  process_manager.py  report_writer.py
tools/config/: KPI.py  __init__.py  camera.py  hud.py
(+4508 files in other folders)
