[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fa-vnv-sil-test-assets"
version = "1.3.0"
description = "FA VnV SIL test assets and CARLA batch runner utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["carla", "openscenario", "sil", "adas", "testing"]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["scenario_runner/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | scenario_runner/openpilot
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
